--- a/styles/light-theme.css
+++ b/styles/light-theme.css
@@ -51,3 +51,12 @@ button.btn:hover {
     background-color: #000;
     color: #fff;
 }
+
+.modal {
+    background-color: rgb(141, 141, 141, 0.8);
+}
+
+.modal-content {
+    background-color: #828282;
+    color: #000;
+}
